# self-agent

./: .env  .env.example  .gitignore  pyproject.toml  requirements.txt
agents/: react_agent.py
llm/: llm.py
mcp_protocol/: __init__.py  client.py  server.py
models/: __init__.py  agent.py  config.py  message.py
skills/where-to-eat/: SKILL.md
tests/: test_llm_client.py  test_mcp_client_server.py  test_react_agent.py
tools/: __init__.py  base.py  tool_register.py
